correct ip and remove db port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: babyrecord-svc
     image: babyrecord-svc
     environment:
-      - svrhost=localhost
+      - svrhost
       - dbhost
       - dbport
       - dbusr
@@ -33,8 +33,6 @@ services:
       - POSTGRES_PASSWORD=${dbpwd}
     volumes:
       - pgdatavol:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     networks:
       brnet:
         ipv4_address: "10.50.0.10"
