--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
-    "react-charts": "^2.0.0-beta.7",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
