added authentication to main pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - dbusr
       - dbname
       - PGPASSWORD=${dbpwd}
+      - jwtkey
+      - userpwd
     depends_on:
       postgres:
         condition: service_started
