--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.2",
     "chart.js": "^4.4.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.7",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
